<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/Size34"
        android:gravity="center"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/main_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:layout_margin="@dimen/FontPadding"
        android:padding="@dimen/ButtonPadding"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/Size20"
        android:onClick="jump_to_search"/>
    <Button
        android:id="@+id/main_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        android:layout_margin="@dimen/FontPadding"
        android:padding="@dimen/ButtonPadding"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/Size20"
        android:onClick="jump_to_add"/>
    <Button
        android:id="@+id/main_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edit"
        android:layout_margin="@dimen/FontPadding"
        android:padding="@dimen/ButtonPadding"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/Size20"
        android:onClick="jump_to_edit"/>
    <Button
        android:id="@+id/main_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:layout_margin="@dimen/FontPadding"
        android:padding="@dimen/ButtonPadding"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/Size20"
        android:onClick="jump_to_delete"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>