<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".edit">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:padding="@dimen/FontPadding"
        android:text="@string/editDevice"
        android:textSize="@dimen/TitleSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/FontPadding"
            android:layout_weight="0"
            android:text="@string/DeviceName"
            android:textColor="@color/black"
            android:textSize="@dimen/SubheadSize" />

        <EditText
            android:id="@+id/Device_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/FontPadding"
            android:layout_weight="1"
            android:hint="@string/DeviceName"
            android:inputType="text"
            android:textSize="@dimen/SubheadSize" />

        <Button
            android:id="@+id/Search_Button"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/FontPadding"
            android:layout_weight="0"
            android:gravity="center"
            android:onClick="search_button"
            android:text="@string/Search"
            android:textSize="@dimen/ButtonSize" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/Device_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


    <Button
        android:id="@+id/Upload_Button"
        style="?android:attr/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/FontPadding"
        android:layout_weight="0"
        android:gravity="center"
        android:onClick="up_load_button"
        android:text="@string/Upload"
        android:textSize="@dimen/ButtonSize" />

</LinearLayout>